--- a/.jsdoc.conf
+++ b/.jsdoc.conf
@@ -24,7 +24,7 @@
 },
 "templates": {
     "systemName": "bitcore",
-    "copyright": "© 2013-2015, BitPay Inc.",
+    "copyright": "© 2018, ApolloStar Inc.",
     "navType": "vertical",
     "theme": "journal",
     "linenums": true,
