--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,8 @@
 {
-  "name": "bitcore-lib",
-  "main": "./bitcore-lib.min.js",
-  "version": "5.0.0-beta.1",
-  "homepage": "http://bitcore.io",
-  "authors": ["BitPay, Inc."],
+  "name": "foxpocket-lib",
+  "main": "./foxpocket-lib.min.js",
+  "version": "5.0.1-beta.1",
+  "authors": ["BitPay, Inc.","ApolloStar"],
   "description": "A pure, powerful core for your bitcoin project.",
   "moduleType": ["globals"],
   "keywords": ["bitcoin", "bitcore", "btc", "satoshi"],
